# ttrankings

./: .env  Cargo.toml
scrapers/: init-db.sh
scrapers/mkttl_match_card_scraper/: .env  .gitignore  Cargo.toml  README.md  com.mkttl.scraper.plist  com.ttrankings.scraper.plist  download_matches.sh  match_html_scraper.rs  process.sh  search_cache.sh  search_teams.sh  search_url.sh
scrapers/mkttl_match_card_scraper/.sqlx/: query-067174c2ee4e18f8f6e551fad9883108bff74ca8ca051b3a5fbdbc3ac3071e00.json  query-11880a854ffb52991a44c700d936341d06f4943c00a328e67731f68e874e23f3.json  query-21d688b9bfb3beb63e0967e4db235a810dfe2cdc510227e89db3054d76a7447d.json  query-501944734092f0cb8c080b0627572064b7749e8b0276e12a4cb0cc55d1603cb8.json  query-507fc21ddf4451e2c3d2c5745008a86909b810236c3684e7079af1a6f89ebbd4.json  query-6218df141abd00f0b87501a8af586b0c68db51e7584802dc053c489d47e21bc0.json  query-6fc307eecdc30f7d149d06b45e233d1c17f60d9b8d021036e7553c318f2324ff.json  query-969c433dd95544113bdbb01c8a9e1ce9c05c2c9c3993ac7d4757514a3a62cca8.json  query-9d902b4cb825545bd99ea9d53abdb5e733c13910e20fec8d1fb18afec48676f2.json  query-a7245bc6340678adc1e9502a3f16ac2d50ef35de50f6b3b21a95bf1c4375576e.json  query-b515c80e1ef4161420ec891afb8ea6ce67b63523c2de29b83ee4f2bed9b2cb6d.json
scrapers/mkttl_match_card_scraper/data/: last_fetch.txt
scrapers/mkttl_match_card_scraper/migrations/: 20250213171839_init.down.sql  20250213171839_init.up.sql  20250214172819_add_unique_constraints.down.sql  20250214172819_add_unique_constraints.up.sql
scrapers/mkttl_match_card_scraper/queries/: player_stats.sql
scrapers/mkttl_match_card_scraper/src/: analysis.rs  config.rs  cup_match.rs  game_scraper.rs  import_to_postgres.rs  import_to_questdb.rs  league_match.rs  lib.rs  main.rs  match_html_scraper.rs  match_score_updater.rs  metrics.rs  parse_csv.rs  scraper.rs  types.rs  utils.rs  web.rs
scrapers/mkttl_match_card_scraper/src/analysis/: README.md
scrapers/mkttl_match_card_scraper/test_output/cup_match/: match-20250130-001.csv
scrapers/mkttl_match_card_scraper/test_output/league_match/: match_104_68_2025_1_31.csv
scrapers/mkttl_match_card_scraper/tests/: game_scraper_test.rs  integration_test.sh
scrapers/mkttl_match_card_scraper/tests/fixtures/: event_viewer_response.json
scrapers/mkttl_match_card_scraper/tests/fixtures/cup_match/: match-20250130-001.csv  match-20250130-001.html  match-20250204-001.csv  match-20250204-001.html
scrapers/mkttl_match_card_scraper/tests/fixtures/fixutre_scraper/: fixtures-results_months.html  fixtures-results_months_2025_02.html
scrapers/mkttl_match_card_scraper/tests/fixtures/league_match/: match_104_68_2025_1_31.csv  match_104_68_2025_1_31.html  partially_complete_match.csv  partially_complete_match.html
tests/fixtures/fixutre_scraper/: fixtures-results_months.html  fixtures-results_months_2025_02.html
