[package]
name = "mkttl_match_card_scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "mkttl_match_card_scraper"
path = "src/lib.rs"

[[bin]]
name = "mkttl_match_card_scraper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.0"
ctrlc = "3.4.2"
futures-util = "0.3.30"
governor = "0.8.0"
hyper = { version = "1.6.0", features = ["full"] }
nonzero_ext = "0.3.0"
questdb-rs = "4.0.3"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full", "test-util"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
scraper = "0.22.0"

[dev-dependencies]
axum-test = "14.2.2"
mockito = "1.2.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.0"
tokio-test = "0.4.3"
tower-service = "0.3"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.11"
