[package]
name = "mkttl_match_card_scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "mkttl_match_card_scraper"
path = "src/lib.rs"

[[bin]]
name = "mkttl_match_card_scraper"
path = "src/main.rs"

[[bin]]
name = "import_to_questdb"
path = "src/import_to_questdb.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
ctrlc = "3.4.2"
futures-util = "0.3.30"
governor = "0.6"
hyper = { version = "1.6.0", features = ["full"] }
nonzero_ext = "0.3.0"
questdb-rs = { version = "4.0.3", features = ["chrono_timestamp"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
scraper = "0.22.0"
notify = "6.1"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "tls-rustls-ring-native-roots", "runtime-tokio-rustls", "macros"] }

[dev-dependencies]
axum-test = "14.2.2"
mockito = "1.2.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.0"
tokio-test = "0.4.3"
tower-service = "0.3"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.11"
