[package]
name = "mkttl_match_card_scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "mkttl_match_card_scraper"
path = "src/lib.rs"

[[bin]]
name = "mkttl_match_card_scraper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
ctrlc = "3.4.2"
dotenv = "0.15"
futures-util = "0.3.30"
governor = "0.6"
hyper = { version = "1.6.0", features = ["full"] }
nonzero_ext = "0.3.0"
questdb-rs = { version = "4.0.3", features = ["chrono_timestamp"] }
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
indicatif = {version = "*", features = ["rayon"]}
scraper = "0.22"
notify = "6.1"
clap = { version = "4.4", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "time", "macros"] }
html-escape = "0.2.13"
num_cpus = "1.16"
thiserror = "1.0"
sha2 = "0.10"
futures = "0.3.31"
rayon = "1.10.0"
html5ever = "0.29.1"

[dev-dependencies]
axum-test = "14.2.2"
mockito = "1.2.0"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
tokio-test = "0.4.3"
tower-service = "0.3"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.11"
serial_test = "3.0"
rand = "0.8"
async-trait = "0.1"
